--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
   },
   "dependencies": {
     "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.3.tgz",
+    "@types/swiper": "^5.4.2",
     "browser-request": "^0.3.3",
     "gfm.css": "^1.1.2",
     "highlight.js": "^10.5.0",
@@ -68,6 +69,8 @@
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-phone-number-input": "^3.1.23",
+    "react-router": "^5.2.0",
+    "react-router-dom": "^5.2.0",
     "react-verification-code-input": "^1.2.9",
     "sanitize-html": "^2.3.2",
     "swiper": "^6.7.1",
@@ -97,6 +100,8 @@
     "@types/node": "^14.14.22",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.2",
+    "@types/react-router": "^5.1.15",
+    "@types/react-router-dom": "^5.1.7",
     "@types/sanitize-html": "^2.3.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
