--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
   "dependencies": {
     "@matrix-org/olm": "https://gitlab.matrix.org/api/v4/projects/27/packages/npm/@matrix-org/olm/-/@matrix-org/olm-3.2.3.tgz",
     "@types/swiper": "^5.4.2",
+    "bootstrap": "4.5.3",
     "browser-request": "^0.3.3",
     "gfm.css": "^1.1.2",
     "highlight.js": "^10.5.0",
@@ -72,6 +73,7 @@
     "react-router": "^5.2.0",
     "react-router-dom": "^5.2.0",
     "react-verification-code-input": "^1.2.9",
+    "reactstrap": "^8.9.0",
     "sanitize-html": "^2.3.2",
     "swiper": "^6.7.1",
     "ua-parser-js": "^0.7.24"
