--- a/package.json
+++ b/package.json
@@ -66,6 +66,8 @@
     "matrix-widget-api": "^0.1.0-beta.15",
     "prop-types": "^15.7.2",
     "react": "^17.0.2",
+    "react-circular-progressbar": "^2.0.4",
+    "react-confetti": "^6.0.1",
     "react-device-detect": "^1.17.0",
     "react-dom": "^17.0.2",
     "react-phone-number-input": "^3.1.23",
