--- a/package.json
+++ b/package.json
@@ -77,7 +77,8 @@
     "reactstrap": "^8.9.0",
     "sanitize-html": "^2.3.2",
     "swiper": "^6.7.1",
-    "ua-parser-js": "^0.7.24"
+    "ua-parser-js": "^0.7.24",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
@@ -106,6 +107,7 @@
     "@types/react-router": "^5.1.15",
     "@types/react-router-dom": "^5.1.7",
     "@types/sanitize-html": "^2.3.1",
+    "@types/uuid": "^8.3.1",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "autoprefixer": "^9.8.6",
